argocd-lab/k8s-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: argocd-lab
  template:
    metadata:
      labels:
        app: argocd-lab
    spec:
      containers:
        - name: argocd-lab
          image: mosama25/argocd-lab:v2.0
          ports:
            - containerPort: 8080
