argocd-lab/k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-lab
spec:
  selector:
    app: argocd-lab
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
